@@ -51,7 +51,8 @@ import java.util.List;
 
 public class JsonOutput extends BaseTransform<JsonOutputMeta, JsonOutputData>
     implements ITransform<JsonOutputMeta, JsonOutputData> {
-  private static Class<?> PKG = JsonOutput.class; // for i18n purposes, needed by Translator2!!
+  private static final Class<?> PKG =
+      JsonOutput.class; // for i18n purposes, needed by Translator2!!
 
   public Object[] prevRow;
   private JsonNodeFactory nc;
@@ -288,7 +289,6 @@ public class JsonOutput extends BaseTransform<JsonOutputMeta, JsonOutputData>
           }
         } catch (HopValueException e) {
           // TODO - Properly handle the exception
-          // e.printStackTrace();
         }
       }
 
@@ -312,7 +312,7 @@ public class JsonOutput extends BaseTransform<JsonOutputMeta, JsonOutputData>
 
       // Fill accessory fields
       if (meta.getJsonSizeFieldname() != null && meta.getJsonSizeFieldname().length() > 0) {
-        additionalRowFields[nextFieldPos] = new Long(jsonLength);
+        additionalRowFields[nextFieldPos] = Long.valueOf(jsonLength);
         nextFieldPos++;
       }
 
@@ -462,7 +462,6 @@ public class JsonOutput extends BaseTransform<JsonOutputMeta, JsonOutputData>
       data.keysGroupIndexes[i] =
           data.inputRowMeta.indexOfValue(meta.getKeyFields()[i].getFieldName());
       if ((r != null) && (data.keysGroupIndexes[i] < 0)) {
-        /* logError( BaseMessages.getString( PKG, "GroupBy.Log.GroupFieldCouldNotFound", meta.getGroupField()[ i ] ) );*/
         setErrors(1);
         stopAll();
         return true;
